Remove extra_float_digits for pgbouncer compatibility

--- a/build.properties
+++ b/build.properties
@@ -12,7 +12,7 @@ osgi.version=9.4.0.build-1201
 
 maven.group.id=org.postgresql
 maven.artifact.id=postgresql
-maven.artifact.version=9.4-1201
+maven.artifact.version=9.4-1201-no-extra-float-digits
 maven.artifact.description=PostgreSQL JDBC Driver
 
 # Maven snapshots and staging repository id and url
